--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,12 @@
+name: My Workflow
 
-  name:
+on:
+  push:
 
-    on: push
+jobs:
+  my-job:
+    runs-on: ubuntu-latest
 
-  jobs:
-
-    my-job:
-
-      runs-on: ubuntu-latest
-
-      steps:
-
-          - name: my-step
-            run: echo "Hello world"
+    steps:
+      - name: My step
+        run: echo "Hello world"
